# pytanki

./: main.py  pyproject.toml
.github/workflows/: pytanki_workflows.yml
game_items/: base.py  commands.py
game_items/tests/: test_commands.py  test_game_item.py
