[tool.poetry]
name = "pytanki"
version = "0.1.0"
description = "Python implementation of the Tanki game"
authors = ["Timofey Danshin"]

[tool.poetry.dependencies]
python = "^3.8"
charmer = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
